# xml

./: .gitignore  CMakeLists.txt  README.md  configure.ac  makefile.am
.github/workflows/: ccpp.yml
include/xml/: attrib.h  common.h  objmap.h  print.h  util.h  version.h  xml.h
include/xml/call/: xml.h
include/xml/impl/: impl_common.h  impl_mem.h  impl_objmap.h  impl_parse.h
src/: xml.c
win/: .gitignore  build.bat  xml.sln  xml.vcxproj  xml.vcxproj.filters
